--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Delizioso</title>
-	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117185013">
+	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117191337">
 	</script>
 
 
@@ -43,9 +43,9 @@
 
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="description" content="Author: Garshin K. V. Enter Text">
+	<meta name="description" content="Author: Garshin K. V. Web site for food delivery">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241117185013">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241117191337">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -508,7 +508,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241117185013"></script>
+	<script src="js/app.min.js?_v=20241117191337"></script>
 
 </body>
 
