--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Delizioso</title>
-	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117191337">
+	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117194857">
 	</script>
 
 
@@ -45,7 +45,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Author: Garshin K. V. Web site for food delivery">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241117191337">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241117194857">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -5014,10 +5014,10 @@
 											</div>
 										</div>
 										<div class="all-category__items-management all-category__items-management--dinner">
-											<button class="swiper-button swiper-button-prev" type="button"></button>
+											<button class="swiper-button swiper-button-prev" type="button" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button class="swiper-button swiper-button-next" type="button"></button>
+											<button class="swiper-button swiper-button-next" type="button" arial-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -6178,10 +6178,10 @@
 										</div>
 
 										<div class="breakfast-category__items-management breakfast-category__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button type="button" class="swiper-button swiper-button-next"></button>
+											<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -7343,10 +7343,10 @@
 										</div>
 
 										<div class="lunch-category__items-management lunch-category__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button type="button" class="swiper-button swiper-button-next"></button>
+											<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -8508,10 +8508,10 @@
 										</div>
 
 										<div class="dinner-category__items-management dinner-category__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button type="button" class="swiper-button swiper-button-next"></button>
+											<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -9673,10 +9673,10 @@
 										</div>
 
 										<div class="pizza-category__items-management pizza-category__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button type="button" class="swiper-button swiper-button-next"></button>
+											<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -10838,10 +10838,10 @@
 										</div>
 
 										<div class="dessert-category__items-management dessert-category__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button type="button" class="swiper-button swiper-button-next"></button>
+											<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -10921,7 +10921,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241117191337"></script>
+	<script src="js/app.min.js?_v=20241117194857"></script>
 </body>
 
 </html>
