--- a/order_online.html
+++ b/order_online.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Delizioso</title>
-	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117195744">
+	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117201053">
 	</script>
 
 
@@ -45,7 +45,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Author: Garshin K. V. Web site for food delivery">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241117195744">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241117201053">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6636,12 +6636,12 @@
 												</div>
 											</div>
 											<div class="all-order__items-management all-order__items-management--dinner">
-												<button class="swiper-button swiper-button-prev" type="button" arial-label="Rewinding forward">
+												<button class="swiper-button swiper-button-prev" type="button" arial-labe="Rewinding forward">
 												</button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination">
 												</div>
-												<button class="swiper-button swiper-button-next" type="button" arial-label="The convertible back">
+												<button class="swiper-button swiper-button-next" type="button" aria-label="The convertible back">
 												</button>
 											</div>
 										</div>
@@ -7590,10 +7590,10 @@
 												</div>
 											</div>
 											<div class="breakfast-order__items-management breakfast-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
-												<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
+												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
 											</div>
 										</div>
 									</div>
@@ -8541,10 +8541,10 @@
 												</div>
 											</div>
 											<div class="lunch-order__items-management lunch-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
-												<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
+												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
 											</div>
 										</div>
 									</div>
@@ -9492,10 +9492,10 @@
 												</div>
 											</div>
 											<div class="dinner-order__items-management dinner-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
-												<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
+												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
 											</div>
 										</div>
 									</div>
@@ -10443,10 +10443,10 @@
 												</div>
 											</div>
 											<div class="dessert-order__items-management dessert-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
-												<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
+												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
 											</div>
 										</div>
 									</div>
@@ -11397,10 +11397,10 @@
 											</div>
 										</div>
 										<div class="pizza-order__items-management pizza-order__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
-											<button type="button" class="swiper-button swiper-button-next" arial-label="The convertible back"></button>
+											<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
 										</div>
 									</div>
 								</div>
@@ -11624,7 +11624,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241117195744"></script>
+	<script src="js/app.min.js?_v=20241117201053"></script>
 </body>
 
 </html>
