--- a/about_us.html
+++ b/about_us.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Delizioso</title>
-	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117201053">
+	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117214801">
 	</script>
 
 
@@ -45,7 +45,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Author: Garshin K. V. Web site for food delivery">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241117201053">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241117214801">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -125,7 +125,7 @@
 							<div class="login-block__inner-poster-group">
 
 								<div class="login-block__enter-image">
-									<img src="img/sign_up_page/sign_up.webp" alt="Pancakes" class="login-block__thumb-unit" width="959" height="963">
+									<img src="img/sign_up_page/sign_up.webp" alt="Pancakes" class="login-block__thumb-unit" width="959" height="963" loading="lazy">
 								</div>
 							</div>
 
@@ -255,7 +255,7 @@
 							<div class="signup-block__inner-poster-group">
 
 								<div class="login-block__enter-image">
-									<img src="img/sign_up_page/sign_up.webp" alt="Pancakes" class="login-block__thumb-unit" width="959" height="963">
+									<img src="img/sign_up_page/sign_up.webp" alt="Pancakes" class="login-block__thumb-unit" width="959" height="963" loading="lazy">
 								</div>
 							</div>
 
@@ -437,7 +437,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241117201053"></script>
+	<script src="js/app.min.js?_v=20241117214801"></script>
 </body>
 
 </html>
