--- a/order_online.html
+++ b/order_online.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Delizioso</title>
-	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117230426">
+	<script type="module" src="https://unpkg.com/@googlemaps/extended-component-library@0.6?_v=20241117231812">
 	</script>
 
 
@@ -45,7 +45,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="Author: Garshin K. V. Web site for food delivery">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241117230426">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241117231812">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6636,7 +6636,7 @@
 												</div>
 											</div>
 											<div class="all-order__items-management all-order__items-management--dinner">
-												<button class="swiper-button swiper-button-prev" type="button" arial-labe="Rewinding forward">
+												<button class="swiper-button swiper-button-prev" type="button" arial-label="Rewinding forward">
 												</button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination">
@@ -7590,7 +7590,7 @@
 												</div>
 											</div>
 											<div class="breakfast-order__items-management breakfast-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
 												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
@@ -8541,7 +8541,7 @@
 												</div>
 											</div>
 											<div class="lunch-order__items-management lunch-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
 												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
@@ -9492,7 +9492,7 @@
 												</div>
 											</div>
 											<div class="dinner-order__items-management dinner-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
 												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
@@ -10443,7 +10443,7 @@
 												</div>
 											</div>
 											<div class="dessert-order__items-management dessert-order__items-management--dinner">
-												<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
+												<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 												<!-- $If a shoot is required & if navigation is required (left/right) -->
 												<div class="swiper-pagination"></div>
 												<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
@@ -11397,7 +11397,7 @@
 											</div>
 										</div>
 										<div class="pizza-order__items-management pizza-order__items-management--dinner">
-											<button type="button" class="swiper-button swiper-button-prev" arial-labe="Rewinding forward"></button>
+											<button type="button" class="swiper-button swiper-button-prev" arial-label="Rewinding forward"></button>
 											<!-- $If a shoot is required & if navigation is required (left/right) -->
 											<div class="swiper-pagination"></div>
 											<button type="button" class="swiper-button swiper-button-next" aria-label="The convertible back"></button>
@@ -11432,11 +11432,11 @@
 
 												<div class="сhoosing-eat__part-goods">
 													<div data-quantity class="quantity">
-														<button data-quantity-minus type="button" class="quantity__button quantity__button--minus"></button>
+														<button data-quantity-minus type="button" class="quantity__button quantity__button--minus" aria-label="Button"></button>
 														<div class="quantity__input">
-															<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+															<input aria-label="Button" data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
 														</div>
-														<button data-quantity-plus type="button" class="quantity__button quantity__button--plus"></button>
+														<button data-quantity-plus type="button" class="quantity__button quantity__button--plus" aria-label="Button"></button>
 													</div>
 													<input id="eat-sum-one" type="text" class="сhoosing-eat__food-sum" name="eat-num-one" placeholder="$24.1" readonly></input>
 												</div>
@@ -11458,11 +11458,11 @@
 												</div>
 												<div class="сhoosing-eat__part-goods">
 													<div data-quantity class="quantity">
-														<button data-quantity-minus type="button" class="quantity__button quantity__button--minus"></button>
+														<button data-quantity-minus type="button" class="quantity__button quantity__button--minus" aria-label="Button"></button>
 														<div class="quantity__input">
-															<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+															<input aria-label="Button" data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
 														</div>
-														<button data-quantity-plus type="button" class="quantity__button quantity__button--plus"></button>
+														<button data-quantity-plus type="button" class="quantity__button quantity__button--plus" aria-label="Button"></button>
 													</div>
 													<input id="eat-sum-two" type="text" class="сhoosing-eat__food-sum" name="eat-num-two" placeholder="$35.7" readonly></input>
 												</div>
@@ -11483,11 +11483,11 @@
 												</div>
 												<div class="сhoosing-eat__part-goods">
 													<div data-quantity class="quantity">
-														<button data-quantity-minus type="button" class="quantity__button quantity__button--minus"></button>
+														<button data-quantity-minus type="button" class="quantity__button quantity__button--minus" aria-label="Button"></button>
 														<div class="quantity__input">
-															<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
+															<input aria-label="Button" data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
 														</div>
-														<button data-quantity-plus type="button" class="quantity__button quantity__button--plus"></button>
+														<button data-quantity-plus type="button" class="quantity__button quantity__button--plus" aria-label="Button"></button>
 													</div>
 													<input id="eat-sum-three" type="text" class="сhoosing-eat__food-sum" name="eat-num-three" placeholder="$18.5" readonly></input>
 												</div>
@@ -11624,7 +11624,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241117230426"></script>
+	<script src="js/app.min.js?_v=20241117231812"></script>
 </body>
 
 </html>
